# beetl-api

./: .gitignore  README.md  dev.sh  pyproject.toml  pytest.ini  readme.md  runtest.sh
beetl-api/: main.py
beetl-api/database/: main.py  models.py
beetlapi/: main.py
beetlapi/database/: main.py  models.py
test/: clean.sh  factory.py  init.sh  test_stuff.py
