[tool.poetry]
name = "beetl-api"
version = "0.1.0"
description = ""
authors = ["iameru <post@i3o.eu>"]
readme = "README.md"
packages = [{include = "beetl_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
