[tool.poetry]
name = "beetlapi"
version = "0.1.0"
description = ""
authors = ["iameru <post@i3o.eu>"]
readme = "README.md"
packages = [{include = "beetlapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest-watch = "^4.2.0"
httpx = "^0.24.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [ "--import-mode=importlib", ]
